--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hertzrp.github.io/campus_game",
+  "homepage": "https://github.com/hertzrp/campus_game/blob/main/src/index.js",
   "name": "493-final-project",
   "version": "0.1.0",
   "private": true,
